--- a/css/main.less
+++ b/css/main.less
@@ -126,6 +126,19 @@ section {
 }
 
 
+/**
+ * Section 2 Specific Styles
+ */
+
+#section2
+{
+	img
+	{
+		display: block;
+		max-width: 100%;
+	}
+}
+
 
 @media screen and (min-width: 40em) {
 	.js #nav {
@@ -172,4 +185,17 @@ section {
 	.container {
 		padding-top:0;
 	}
+
+	/**
+	 * Section 2 Specific Styles
+	 */
+	#section2
+	{
+		img
+		{
+			width: 50%;
+			float: left;
+		}
+	}
+
 }
