--- a/css/main.less
+++ b/css/main.less
@@ -10,7 +10,7 @@ html {
 }
 .container {
 	margin:auto;
-	padding:20px;
+	padding:10px;
 	max-width:800px;
 }
 #nav-toggle {
@@ -18,8 +18,11 @@ html {
 	margin:10px;
 	height:50px;
 	width:50px;
-	background:url(../img/menu-icon.png) @black;
-	text-indent: -999999px;
+	line-height:50px;
+	color:#fff;
+	.center;
+	.border-radius(3px);
+	background:@black;
 }
 #nav {
 
@@ -37,6 +40,12 @@ h1 {
 
 section {
 	margin:20px 0;
+	.inner {
+		background:#fff;
+		padding:10px;
+		.border-radius(3px);
+	}
+	
 }
 /* COVER PAGE */
 #cover {
@@ -69,23 +78,30 @@ section {
 }
 #section1,
 #section2 {
+	.block.orange;
+	padding:10px;
+	.border-radius(3px);
 	h1 {
-		
+		.headline(@orange, #fff, 3);
+		margin-bottom:10px;
 	}
 	h2 {
-		.ribbon(@orange, #f9f9f9, #f9f9f9);
+		.ribbon(@teal, #f9f9f9, #f9f9f9);
 	}
 	p {
 		padding:0 1rem;
 	}
 }
 #section3 {
+	padding:10px;
 	.block.green;
 	.border-radius(3px);
-	padding:20px 0 0 0;
 	h1 {
 		.headline(@green, #fff, 2.8);
-		margin-bottom:20px;
+		margin-bottom:10px;
+	}
+	.inner {
+		padding:0;
 	}
 	ol {
 		counter-reset:li;
@@ -107,6 +123,9 @@ section {
 				.circle(darken(@green, 10%),@green, 40px);
 				.heavy;
 				font-size:25px;
+			}
+			&:first-child {
+				border:none;
 			}
 		}
 		h4 {
@@ -136,7 +155,7 @@ section {
 		display: none;
 	}
 	#nav {
-		position:absolute !important;
+		position:fixed !important;
 		top:0;
 		left:0;
 		width:100%;
@@ -167,12 +186,14 @@ section {
 		}
 	}
 	.logo {
-		margin:10px auto 0;
+		margin:60px auto 0;
 		float:none;
 		display:block;
 		height:100px;
 	}
 	.container {
 		padding-top:0;
+		min-height:100%;
+		
 	}
 }
