--- a/css/main.css
+++ b/css/main.css
@@ -1032,7 +1032,7 @@ section .inner {
   display: block;
   max-width: 100%;
 }
-@media screen and (min-width: 40em) {
+@media screen and (min-width: 600px) {
   @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/jmoney\/Sites\/adept\/mobile-summit\/html\/css\/main\.less}line{font-family:\00003163}}
   .js #nav {
     position: relative;
