--- a/css/main.less
+++ b/css/main.less
@@ -159,7 +159,7 @@ section {
 }
 
 
-@media screen and (min-width: 40em) {
+@media screen and (min-width: 600px) {
 	.js #nav {
 		position: relative;
 		max-height: none;
