--- a/css/main.less
+++ b/css/main.less
@@ -40,6 +40,12 @@ h1 {
 
 section {
 	margin:20px 0;
+	ul  {
+		padding-left:20px;
+	}
+	ul, ol, p {
+		margin-bottom:5px;
+	}
 	.inner {
 		background:#fff;
 		padding:10px;
@@ -123,6 +129,9 @@ section {
 				.circle(darken(@green, 10%),@green, 40px);
 				.heavy;
 				font-size:25px;
+				a {
+					color:@teal;
+				}
 			}
 			&:first-child {
 				border:none;
@@ -157,8 +166,33 @@ section {
 		max-width: 100%;
 	}
 }
-
-
+#section4,
+#section5 {
+	.block.yellow;
+	padding:10px;
+	.border-radius(3px);	
+	h3 {
+		.center;
+		.font-size(2);
+		color:#999;
+		.bold;
+		.uc;
+	}
+}
+#section4 h1 {
+	.headline(@yellow, @black, 3);
+}
+#section5 {
+	.block.black;
+	h1 {
+		.headline(@black, #fff, 3);
+	}
+	
+}
+#section2 {
+/*	background:url(../img/choices.png) no-repeat center 10px @orange;
+	padding-top:50px;*/
+}
 @media screen and (min-width: 600px) {
 	.js #nav {
 		position: relative;
@@ -172,7 +206,7 @@ section {
 		top:0;
 		left:0;
 		width:100%;
-		height:50px;
+		min-height:50px;
 		.center;
 		background:@black;
 		z-index: 99999999;
@@ -191,9 +225,12 @@ section {
 					content:"";
 				}
 				a {
+					.font-size(1.3);
+					line-height:50px;
 					display:inline-block;
 					color:#fff;
-					padding:10px;
+					padding:0 8px;
+					.uc;
 				}
 			}
 		}
@@ -207,7 +244,7 @@ section {
 	.container {
 		padding-top:0;
 		min-height:100%;
-		
+		padding-bottom:100%;
 	}
 
 	/**
@@ -221,5 +258,54 @@ section {
 			float: left;
 		}
 	}
-
+	#section3 {
+		ol li a {
+			position:absolute;
+			right:20px;
+			top:50%;
+			.border-radius(50px);
+			background:#eee;
+			padding:0 30px;
+			line-height:40px;
+			margin-top:-20px;
+			color:#999;
+			&:hover {
+				background:#ddd;
+			}
+		}
+	}
+	#section4,
+	#section5 {
+		ul {
+			padding:0;
+			margin:0;
+		}
+		li {
+			list-style:none;
+			margin:0;
+			padding:20px;
+			.center;
+			float:left;
+			width:50%;
+			display:block;
+			.box-sizing(border-box);
+			.bold;
+			.uc;
+			border-top:solid 1px #eee;
+			&:nth-child(1),
+			&:nth-child(2){
+				border-top:none;
+			}
+			&:nth-child(odd){
+				border-right:solid 1px #eee;
+			}
+			small {
+				display:block;
+				.font-size(1.3);
+				color:#999;
+				.normal;
+				
+			}
+		}
+	}
 }
