--- a/css/mixins.less
+++ b/css/mixins.less
@@ -13,6 +13,10 @@
 @yellow:#fce550;
 @green:#c1d72e;
 @black:#333;
+@vlight-gray: #eee;
+@light-gray: #aaa;
+@mid-gray: #777;
+@dark-gray: #333;
 
 
 /* ==========================================================================
