--- a/css/main.less
+++ b/css/main.less
@@ -153,6 +153,13 @@ section {
 	
 }
 
+ul li small {
+	display:block;
+	.font-size(1.3);
+	color:#999;
+	.normal;
+	
+}
 
 /**
  * Section 2 Specific Styles
@@ -170,7 +177,10 @@ section {
 #section5 {
 	.block.yellow;
 	padding:10px;
-	.border-radius(3px);	
+	.border-radius(3px);
+	h1 {
+		margin-bottom:10px;
+	}
 	h3 {
 		.center;
 		.font-size(2);
@@ -181,11 +191,13 @@ section {
 }
 #section4 h1 {
 	.headline(@yellow, @black, 3);
+	margin-bottom:10px;
 }
 #section5 {
 	.block.black;
 	h1 {
 		.headline(@black, #fff, 3);
+		margin-bottom:10px;
 	}
 	
 }
@@ -193,7 +205,20 @@ section {
 /*	background:url(../img/choices.png) no-repeat center 10px @orange;
 	padding-top:50px;*/
 }
+.theend {
+	display:none;
+}
 @media screen and (min-width: 600px) {
+	.theend {
+		display:block;
+		.uc;
+		.heavy;
+		color:#ccc;
+		.font-size(15);
+		.center;
+		padding-bottom:50%;
+		margin:0;
+	}
 	.js #nav {
 		position: relative;
 		max-height: none;
@@ -225,12 +250,30 @@ section {
 					content:"";
 				}
 				a {
-					.font-size(1.3);
+					.font-size(1.2);
 					line-height:50px;
 					display:inline-block;
 					color:#fff;
 					padding:0 8px;
 					.uc;
+				}
+				&.current {
+					a {
+						color:@orange;
+						position:relative;
+						&:after {
+							content:" ";
+							position:absolute;
+							width:0;
+							height:0;
+							border:solid 10px transparent;
+							border-bottom-color:#f9f9f9;
+							bottom:0px;
+							left:50%;
+							margin-left:-10px;
+						}
+						
+					}
 				}
 			}
 		}
@@ -298,13 +341,6 @@ section {
 			}
 			&:nth-child(odd){
 				border-right:solid 1px #eee;
-			}
-			small {
-				display:block;
-				.font-size(1.3);
-				color:#999;
-				.normal;
-				
 			}
 		}
 	}
