--- a/css/main.less
+++ b/css/main.less
@@ -232,6 +232,14 @@ ul li small {
 		padding-bottom:50%;
 		margin:0;
 	}
+	section {
+		h2 {
+			margin-top:30px !important;
+			&:first-of-type{
+				margin-top:0 !important;
+			}
+		}
+	}
 	.js #nav {
 		position: relative;
 		max-height: none;
@@ -321,6 +329,27 @@ ul li small {
 		
 		h2.small {
 			.font-size(2);
+		}
+		.cols3,
+		.cols2 {
+			li {
+				.center;
+				float:left;
+				width:33.3333%;
+				list-style:none;
+				border-left:solid 1px #eee;
+				.box-sizing(border-box);
+				.uc;
+				.heavy;
+				padding:10px;
+				margin:10px 0;
+				&:first-child {
+					border:none;
+				}
+			}
+		}
+		.cols2 li {
+			width:50%;
 		}
 	}
 	#section3 {
