--- a/css/main.less
+++ b/css/main.less
@@ -184,7 +184,7 @@ ul li small {
  * Section 2 Specific Styles
  */
 
-#section2
+#section2, #section1
 {
 	figure
 	{
@@ -336,7 +336,7 @@ ul li small {
 	/**
 	 * Section 2 Specific Styles
 	 */
-	#section2
+	#section2, #section1
 	{
 		.venn {
 			width:70%;
@@ -380,6 +380,14 @@ ul li small {
 				border:none;
 				clear:both;
 			}
+		}
+	}
+	#section1 {
+		figure.desktop {
+			width: 70%;
+		}
+		figure.mobile {
+			width: 30%;
 		}
 	}
 	#section3 {
