--- a/css/main.less
+++ b/css/main.less
@@ -37,7 +37,10 @@ h1 {
 	overflow:hidden;
 	.center;
 }
-
+img.resp-img {
+	.border-radius(3px);
+	width:100%;
+}
 section {
 	margin:20px 0;
 	ul  {
@@ -392,6 +395,10 @@ ul li small {
 		}
 	}
 	#section3 {
+		h1 {
+			.headline(@green, #fff, 3);
+			margin-bottom:10px;
+		}
 		ol li a {
 			position:absolute;
 			right:20px;
